# dnf-plugins-extras

./: .gitignore  AUTHORS  CMakeLists.txt  README.md  README.rst  debug.html  dnf-plugins-extras.spec  genindex.html  index.html  leaves.html  local.html  migrate.html  objects.inv  orphans.html  release_notes.html  repoclosure.html  repograph.html  repomanage.html  rpmconf.html  search.html  searchindex.js  setup.cfg  snapper.html  tox.ini  tracer.html
.github/workflows/: ci.yml
.tx/: config
_sources/: index.txt  migrate.txt  release_notes.txt  repoclosure.txt  repograph.txt  rpmconf.txt  snapper.txt
doc/: CMakeLists.txt  conf.py  debug.rst  index.rst  local.rst  offline-upgrade.rst  orphans.rst  rebuild-initrd.rst  release_notes.rst  repoclosure.rst  repomanage.rst  rpmconf.rst  showvars.rst  snapper.rst  summaries_cache  system-upgrade.rst  torproxy.rst  tracer.rst  versionlock.rst
etc/dnf/: CMakeLists.txt
etc/dnf/plugins/: CMakeLists.txt  local.conf  rebuildinitrd.conf  rpmconf.conf  snapper.conf  torproxy.conf
etc/systemd/: CMakeLists.txt  dnf-offline-upgrade-cleanup.service  dnf-offline-upgrade.service  dnf-system-upgrade.service
package/: archive  dnf-plugins-extras.spec
plugins/: CMakeLists.txt  coffee.py  debug.py  kickstart.py  leaves.py  local.py  migrate.py  offline_upgrade.py  orphans.py  rebuild_initrd.py  repoclosure.py  repograph.py  repomanage.py  rpm_conf.py  rpmconf.py  show_leaves.py  showvars.py  snapper.py  system_upgrade.py  torproxy.py  tracer.py  versionlock.py
plugins/dnfpluginsextras/: CMakeLists.txt  __init__.py
po/: CMakeLists.txt  af.po  am.po  anp.po  ar.po  as.po  ast.po  bal.po  be.po  bg.po  bn.po  bn_IN.po  bo.po  br.po  brx.po  bs.po  ca.po  cs.po  cy.po  da.po  de.po  de_CH.po  dnf-plugins-extras.pot  el.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  (+60 more)
scripts/: lint  pylint_false_positives  update_releasenotes.py
tests/: __init__.py  support.py  test_kickstart.py  test_offline_upgrade.py  test_repoclosure.py  test_repograph.py  test_repomanage.py  test_rpmconf.py  test_system_upgrade.py
tests/dnfpluginsextras/: __init__.py  test_lib.py
